--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -10,12 +10,14 @@
             <th>@column.Value</th>
         }
     </tr>
-    <tr>
-        @{
-            //TODO #2: Complete the View Jobs By Category Table
-        }
-
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
+    <tr>   
+        <td>
+            <a asp-controller="List"
+               asp-action="Jobs" 
+               asp-route-column="all" 
+               asp-route-value="all">View All
+            </a>
+        </td> 
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
