--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -2,9 +2,41 @@
 
     <h1>@ViewBag.title</h1>
 
-    @{
-        //TODO #1: Use a loop to display job results in a table.
+
+ 
+   
+     @foreach (var job in ViewBag.jobs)
+      {  
+<table class="job-listing">
+     <tr>
+            <td>Id: </td>
+            <td>@job.Id</td>
+        </tr>
+        <tr>
+            <td>Name: </td>
+            <td> @job.Name</td>
+        </tr>
+        <tr>
+            <td>Employer: </td>
+            <td>@job.Employer</td>
+        </tr>
+        <tr>
+            <td>Location: </td>
+            <td>@job.Location</td>
+        </tr>
+        <tr>
+            <td>Position Type: </td>
+            <td>@job.PositionType</td>
+        </tr>
+        <tr>
+            <td>Skill: </td>
+            <td>@job.CoreCompetency</td>
+        </tr>
+    </table>
     }
 
 
+
 </div>
+
+
