--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -2,16 +2,27 @@
 
     <h1>@ViewBag.title</h1>
 
+
     <form action="/search/results" method="post">
         <h2>Search by:</h2>
 
         <p>
             @foreach (var column in ViewBag.columns)
             {
-                <span>
-                    <input type="radio" name="searchType" id="@column.Key" value="@column.Key" checked="@column.Key == 'all'" />
-                    <label for="@column.Key">@column.Value</label>
-                </span>
+                if (column.Key == ViewBag.searchtype)
+                {
+                    <span>
+                        <input type="radio" name="searchType" id="@column.Key" value="@column.Key" checked />
+                        <label for="@column.Key">@column.Value</label>
+                    </span>
+                }
+                else
+                {
+                    <span>
+                        <input type="radio" name="searchType" id="@column.Key" value="@column.Key" />
+                        <label for="@column.Key">@column.Value</label>
+                    </span>
+                }
             }
 
         </p>
@@ -27,7 +38,46 @@
     <hr />
 
     @{
-        //TODO #4: Loop over the search results to display all job fields.
+
+        if (ViewBag.jobs != null)
+        {
+            foreach (var job in ViewBag.jobs)
+            {
+                <table class="job-listing">
+                    <tr>
+                        <td>Id: </td>
+                        <td>@job.Id</td>
+                    </tr>
+                    <tr>
+                        <td>Name: </td>
+                        <td> @job.Name</td>
+                    </tr>
+                    <tr>
+                        <td>Employer: </td>
+                        <td>@job.Employer</td>
+                    </tr>
+                    <tr>
+                        <td>Location: </td>
+                        <td>@job.Location</td>
+                    </tr>
+                    <tr>
+                        <td>Position Type: </td>
+                        <td>@job.PositionType</td>
+                    </tr>
+                    <tr>
+                        <td>Skill: </td>
+                        <td>@job.CoreCompetency</td>
+                    </tr>
+                </table>
+            }
+        }
+       
+
+
+
+
+
+
     }
 
 </div>
